[package]
name = "chrust"
version = "0.1.0"
authors = ["Sam Sendelbach <sbsends@gmail.com>", "Varun Iyer <varuni@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
structopt = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"