[package]
name = "halo"
version = "0.1.0"
authors = ["Varun Iyer <varuni@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
structopt = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
sha-1 = "0.8.2"
parking_lot = "0.10.2"
chan = "0.1.23"
rand = "0.7"